feat(docs): add repository foundation and documentation files (#18)
* feat(docs): add repository foundation and documentation files

Resolves #2

--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,27 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
+
+# =============================================================================
+# Generated Artifacts
+# =============================================================================
+
+# Scanner, linter, and test result files
+logs/
+*.log
+
+# Checkov security scan reports
+checkov-results.json
+checkov-junit.xml
+
+# Generated PR from Copilot
+pr.md
+pr-reference.xml
+
+# Copilot tracking
+.copilot-tracking/
+
+# MCP server configuration - exclude local token files
+.mcp/*-local.json
+.mcp/*.local.json
+.mcp/.env
