--- a/collections/hve-core-all.collection.yml
+++ b/collections/hve-core-all.collection.yml
@@ -26,6 +26,10 @@ items:
   kind: agent
 - path: .github/agents/hve-core-installer.agent.md
   kind: agent
+- path: .github/agents/instruction-analyzer.agent.md
+  kind: agent
+- path: .github/agents/instruction-generator.agent.md
+  kind: agent
 - path: .github/agents/memory.agent.md
   kind: agent
 - path: .github/agents/pr-review.agent.md
@@ -41,6 +45,8 @@ items:
 - path: .github/agents/task-implementor.agent.md
   kind: agent
 - path: .github/agents/task-planner.agent.md
+  kind: agent
+- path: .github/agents/task-question-framer.agent.md
   kind: agent
 - path: .github/agents/task-researcher.agent.md
   kind: agent
@@ -82,6 +88,8 @@ items:
   kind: prompt
 - path: .github/prompts/incident-response.prompt.md
   kind: prompt
+- path: .github/prompts/instruction-files-from-source.prompt.md
+  kind: prompt
 - path: .github/prompts/prompt-analyze.prompt.md
   kind: prompt
 - path: .github/prompts/prompt-build.prompt.md
@@ -97,6 +105,8 @@ items:
 - path: .github/prompts/task-implement.prompt.md
   kind: prompt
 - path: .github/prompts/task-plan.prompt.md
+  kind: prompt
+- path: .github/prompts/task-question-frame.prompt.md
   kind: prompt
 - path: .github/prompts/task-research.prompt.md
   kind: prompt
@@ -153,5 +163,5 @@ items:
 - path: .github/skills/video-to-gif
   kind: skill
 display:
-  ordering: alpha
   featured: true
+  ordering: alpha
