feat(skills)!: migrate PR reference generation to self-contained skill (#669)
## Description

Migrates PR reference generation from `scripts/dev-tools/` to a
self-contained `pr-reference` skill package at
`.github/skills/shared/pr-reference/`. Refactored all caller files to
use semantic skill invocation instead of direct script paths. Removed
the `scripts/dev-tools/` directory and its CIHelpers.psm1 dependency.
Added new `list-changed-files` and `read-diff` utility scripts with
comprehensive tests, dynamic skill test discovery in CI, and path
portability guidance for distributed skill packages.

Also fixed an issue with the Skills packaging for the VS Code extension,
which was not including skills by referencing folder instead of the
skill file.

## Related Issue(s)

Closes #624

## Type of Change

Select all that apply:

**Code & Documentation:**

- [ ] Bug fix (non-breaking change fixing an issue)
- [x] New feature (non-breaking change adding functionality)
- [x] Breaking change (fix or feature causing existing functionality to
change)
- [x] Documentation update

**Infrastructure & Configuration:**

- [x] GitHub Actions workflow
- [ ] Linting configuration (markdown, PowerShell, etc.)
- [ ] Security configuration
- [ ] DevContainer configuration
- [ ] Dependency update

**AI Artifacts:**

- [ ] Reviewed contribution with `prompt-builder` agent and addressed
all feedback
- [x] Copilot instructions (`.github/instructions/*.instructions.md`)
- [x] Copilot prompt (`.github/prompts/*.prompt.md`)
- [x] Copilot agent (`.github/agents/*.agent.md`)
- [x] Copilot skill (`.github/skills/*/SKILL.md`)

> **Note for AI Artifact Contributors**:
>
> - **Agents**: Research, indexing/referencing other project (using
standard VS Code GitHub Copilot/MCP tools), planning, and general
implementation agents likely already exist. Review `.github/agents/`
before creating new ones.
> - **Skills**: Must include both bash and PowerShell scripts. See
[Skills](../docs/contributing/skills.md).


--- a/.github/workflows/pester-tests.yml
+++ b/.github/workflows/pester-tests.yml
@@ -67,12 +67,27 @@ jobs:
           Write-Host "Changed PowerShell files:"
           $changedFiles | ForEach-Object { Write-Host "  - $_" }
 
+          # Build test search paths: scripts/tests + skill test dirs at known depths
+          # Skills live at .github/skills/<skill>/ or .github/skills/<collection>/<skill>/
+          $testSearchPaths = @('scripts/tests')
+          $skillsRoot = Join-Path (Get-Location) '.github' 'skills'
+          if (Test-Path $skillsRoot) {
+            foreach ($depth in @('*', '*/*')) {
+              $pattern = Join-Path $skillsRoot $depth 'tests'
+              Get-Item -Path $pattern -ErrorAction SilentlyContinue |
+                Where-Object { $_.PSIsContainer -and (Test-Path (Join-Path $_.Parent.FullName 'scripts')) } |
+                ForEach-Object { $testSearchPaths += $_.FullName }
+            }
+          }
+
           # Map source files to their test files
           $testFiles = @()
           foreach ($file in $changedFiles) {
             $fileName = [System.IO.Path]::GetFileNameWithoutExtension($file)
-            # Look for corresponding test file anywhere in scripts/tests
-            $matchingTests = Get-ChildItem -Path "scripts/tests" -Filter "$fileName.Tests.ps1" -Recurse -ErrorAction SilentlyContinue
+            # Look for corresponding test file in all test search paths (scripts/tests and skill test dirs)
+            $matchingTests = $testSearchPaths | ForEach-Object {
+              Get-ChildItem -Path $_ -Filter "$fileName.Tests.ps1" -Recurse -ErrorAction SilentlyContinue
+            }
             if ($matchingTests) {
               $testFiles += $matchingTests.FullName
             }
