--- a/collections/hve-core-all.collection.yml
+++ b/collections/hve-core-all.collection.yml
@@ -203,5 +203,8 @@ items:
   kind: instruction
 - path: .github/skills/experimental/video-to-gif
   kind: skill
+- path: .github/skills/shared/pr-reference
+  kind: skill
 display:
   ordering: alpha
+  featured: true
