--- a/collections/hve-core.collection.yml
+++ b/collections/hve-core.collection.yml
@@ -97,5 +97,8 @@ items:
     kind: instruction
   - path: .github/instructions/shared/hve-core-location.instructions.md
     kind: instruction
+  # Skills
+  - path: .github/skills/shared/pr-reference
+    kind: skill
 display:
   ordering: manual
