--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,6 @@
   },
   "search.followSymlinks": false,
   "markdown.mermaid.theme": "default",
-
   "yaml.schemas": {
     "./scripts/linting/schemas/root-community-frontmatter.schema.json": [
       "README.md",
@@ -20,7 +19,6 @@
       "docs/**/*.md"
     ]
   },
-
   "chat.instructionsFilesLocations": {
     ".github/instructions/ado": true,
     ".github/instructions/coding-standards": true,
@@ -44,6 +42,10 @@
     ".github/prompts/github": true,
     ".github/prompts/hve-core": true,
     ".github/prompts/security-planning": true,
+  },
+  "chat.agentSkillsLocations": {
+    ".github/skills": true,
+    ".github/skills/shared": true
   },
   "github.copilot.chat.commitMessageGeneration.instructions": [
     {
