--- a/collections/design-thinking.collection.yml
+++ b/collections/design-thinking.collection.yml
@@ -20,6 +20,8 @@ items:
   # Instructions
   - path: .github/instructions/design-thinking/dt-coaching-identity.instructions.md
     kind: instruction
+  - path: .github/instructions/design-thinking/dt-method-07-hifi-prototypes.instructions.md
+    kind: instruction
   - path: .github/instructions/design-thinking/dt-method-sequencing.instructions.md
     kind: instruction
   - path: .github/instructions/design-thinking/dt-quality-constraints.instructions.md
