--- a/collections/hve-core-all.collection.yml
+++ b/collections/hve-core-all.collection.yml
@@ -170,6 +170,8 @@ items:
   kind: instruction
 - path: .github/instructions/design-thinking/dt-method-03-synthesis.instructions.md
   kind: instruction
+- path: .github/instructions/design-thinking/dt-method-07-hifi-prototypes.instructions.md
+  kind: instruction
 - path: .github/instructions/design-thinking/dt-method-sequencing.instructions.md
   kind: instruction
 - path: .github/instructions/design-thinking/dt-quality-constraints.instructions.md
