feat(agents): add system architecture reviewer for design trade-offs and ADR creation (#626)
## Description

Adds the **System Architecture Reviewer** agent to the hve-core library,
ported from
[github/awesome-copilot](https://github.com/github/awesome-copilot) and
restructured to align with hve-core conventions.

This agent provides structured architecture review guidance using the
Azure Well-Architected Framework, covering system context assessment,
pillar evaluation, design trade-off analysis, technology selection, and
ADR creation. It fills a gap between the existing
`security-plan-creator` (security-focused) and `adr-creation` (decision
recording) agents by providing the upstream architecture analysis that
feeds into both.

### Key Design Decisions

- **ADR output path**: Aligned with `adr-creation` agent convention
(`docs/decisions/` with ISO date-prefixed filenames) rather than
`docs/architecture/ADR-[number]-[title].md`
- **Security handoff**: Architecture security concerns delegate to
`security-plan-creator` via declared handoff rather than duplicating
security analysis
- **Maturity tracking**: Managed in collection manifests per hve-core
convention, not in agent frontmatter

## Related Issue(s)

Closes #92

## Type of Change

**Code & Documentation:**

- [ ] Bug fix (non-breaking change fixing an issue)
- [x] New feature (non-breaking change adding functionality)
- [ ] Breaking change (fix or feature causing existing functionality to
change)
- [x] Documentation update

**AI Artifacts:**

- [x] Reviewed contribution with `prompt-builder` agent and addressed
all feedback
- [ ] Copilot instructions (`.github/instructions/*.instructions.md`)
- [ ] Copilot prompt (`.github/prompts/*.prompt.md`)
- [x] Copilot agent (`.github/agents/*.agent.md`)
- [ ] Copilot skill (`.github/skills/*/SKILL.md`)

## Sample Prompts (for AI Artifact Contributions)

### System Architecture Reviewer

**User Request:**
> "Review the architecture for our new event-driven microservices
p

--- a/collections/hve-core-all.collection.yml
+++ b/collections/hve-core-all.collection.yml
@@ -69,6 +69,8 @@ items:
   kind: agent
 - path: .github/agents/project-planning/product-manager-advisor.agent.md
   kind: agent
+- path: .github/agents/project-planning/system-architecture-reviewer.agent.md
+  kind: agent
 - path: .github/agents/project-planning/ux-ui-designer.agent.md
   kind: agent
 - path: .github/agents/security-planning/security-plan-creator.agent.md
@@ -210,5 +212,5 @@ items:
 - path: .github/skills/shared/pr-reference
   kind: skill
 display:
-  ordering: alpha
   featured: true
+  ordering: alpha
