--- a/collections/design-thinking.collection.yml
+++ b/collections/design-thinking.collection.yml
@@ -24,6 +24,8 @@ items:
     kind: instruction
   - path: .github/instructions/design-thinking/dt-method-07-deep.instructions.md
     kind: instruction
+  - path: .github/instructions/design-thinking/dt-method-08-testing.instructions.md
+    kind: instruction
   - path: .github/instructions/design-thinking/dt-method-sequencing.instructions.md
     kind: instruction
   - path: .github/instructions/design-thinking/dt-quality-constraints.instructions.md
