--- a/collections/hve-core-all.collection.yml
+++ b/collections/hve-core-all.collection.yml
@@ -182,6 +182,8 @@ items:
   kind: instruction
 - path: .github/instructions/design-thinking/dt-method-07-hifi-prototypes.instructions.md
   kind: instruction
+- path: .github/instructions/design-thinking/dt-method-08-testing.instructions.md
+  kind: instruction
 - path: .github/instructions/design-thinking/dt-method-sequencing.instructions.md
   kind: instruction
 - path: .github/instructions/design-thinking/dt-quality-constraints.instructions.md
@@ -220,5 +222,5 @@ items:
 - path: .github/skills/shared/pr-reference
   kind: skill
 display:
-  featured: true
   ordering: alpha
+  featured: true
