feat(instructions): create dt-method-02-deep.instructions.md (#700)
# Pull Request

## Description

Creates `dt-method-02-deep.instructions.md`, an on-demand deep reference
for DT Method 2 (Design Research). The `dt-coach` agent loads this file
via `read_file` when users require advanced research guidance beyond
what the method-tier instruction provides.

The file contains 17 H3 subsections across 4 domains, each with prose,
bullets, and a labeled coaching prompt:

- **Advanced Interview Techniques** — pre-interview preparation,
cognitive interview techniques, silence and pause usage, reframing
resistance, cultural context adaptation
- **Ethnographic Observation Methods** — contextual inquiry setup,
shadow observation protocols, artifact analysis, environmental mapping
- **Evidence Triangulation** — multi-source validation, contradictory
evidence handling, pattern saturation assessment, insight confidence
scoring
- **Manufacturing Research Patterns** — shift-based research
considerations, production floor observation, operator vs. supervisor
perspectives, supply chain stakeholder mapping

Also adds `.github/agents/design-thinking` to `chat.agentFilesLocations`
in `.vscode/settings.json` so the `dt-coach` agent appears in the VS
Code agent dropdown.

## Related Issue(s)

Closes #585

## Type of Change

Select all that apply:

**Code & Documentation:**

- [ ] Bug fix (non-breaking change fixing an issue)
- [x] New feature (non-breaking change adding functionality)
- [ ] Breaking change (fix or feature causing existing functionality to
change)
- [ ] Documentation update

**Infrastructure & Configuration:**

- [ ] GitHub Actions workflow
- [ ] Linting configuration (markdown, PowerShell, etc.)
- [ ] Security configuration
- [ ] DevContainer configuration
- [ ] Dependency update

**AI Artifacts:**

- [x] Reviewed contribution with `prompt-builder` agent and addressed
all feedback
- [x] Copilot instructions (`.github/instructions/*.instructions.md`)
- [ ] Copilot prompt (

--- a/collections/hve-core-all.collection.yml
+++ b/collections/hve-core-all.collection.yml
@@ -213,6 +213,9 @@ items:
 - path: .github/instructions/design-thinking/dt-method-01-scope.instructions.md
   kind: instruction
   maturity: experimental
+- path: .github/instructions/design-thinking/dt-method-02-deep.instructions.md
+  kind: instruction
+  maturity: experimental
 - path: .github/instructions/design-thinking/dt-method-02-research.instructions.md
   kind: instruction
   maturity: experimental
@@ -286,3 +289,4 @@ items:
   kind: skill
 display:
   ordering: alpha
+  featured: true
