feat(instructions): add dt-method-09-deep instructions for Method 9 advanced coaching (#703)
# Pull Request

## Description

Add deep-tier instructions for Design Thinking Method 9: Iteration at
Scale. This file provides advanced coaching knowledge for complex
organizational change management, scaling patterns, and adoption
measurement that exceeds the method-tier guidance.

Key additions:

- Advanced coaching hats: Change Strategist, Scaling Architect
- ADKAR framework application for solution adoption
- Organizational resistance and champion identification patterns
- Phased rollout strategies with rollback capabilities
- Collection and plugin updates for design-thinking and hve-core-all

## Related Issue(s)

Closes #610

## Type of Change

**AI Artifacts:**

- [x] Reviewed contribution with prompt-builder agent and addressed all
feedback
- [x] Copilot instructions (.github/instructions/*.instructions.md)

## Sample Prompts (for AI Artifact Contributions)

**User Request:**

> "Help me scale this validated prototype to multiple factory sites,
addressing organizational resistance and change management."

**Execution Flow:**

1. Coach loads dt-method-09-deep.instructions.md when encountering
complex scaling scenarios.
2. Activates Change Strategist or Scaling Architect coaching hat based
on user context.
3. Guides through ADKAR phases, champion identification, and phased
rollout planning.

**Output Artifacts:**

- Coaching responses with advanced scaling and change management
techniques embedded in the Design Thinking Method 9 workflow.

**Success Indicators:**

- Coach correctly activates deep-tier guidance for complex scaling
scenarios.
- ADKAR framework and organizational change patterns surface in coaching
responses.

## Testing

- Verified file structure follows existing
dt-method-*-deep.instructions.md patterns.
- Confirmed frontmatter format matches peer files.
- Validated collection YAML/MD and plugin updates reference the new file
correctly.

## Checklist

#

--- a/collections/hve-core-all.collection.yml
+++ b/collections/hve-core-all.collection.yml
@@ -246,6 +246,9 @@ items:
 - path: .github/instructions/design-thinking/dt-method-08-testing.instructions.md
   kind: instruction
   maturity: experimental
+- path: .github/instructions/design-thinking/dt-method-09-deep.instructions.md
+  kind: instruction
+  maturity: experimental
 - path: .github/instructions/design-thinking/dt-method-09-iteration.instructions.md
   kind: instruction
   maturity: experimental
